--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Business Frontpage
 description: A business home page starter template for Bootstrap 4 featuring marketing boxes and a full width image header.
 
 # disabled because we are using a custom domain
-#baseurl: /business-frontpage 
+baseurl: /
 
 color-scheme: "mediumseagreen" # the scheme can be any HEX code like "#00aa55"
 
